# lpa7_final_project

./: .gitignore  README.md  pyproject.toml  setup.cfg
auth_app/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
auth_app/migrations/: 0001_initial.py  0002_alter_lpa7user_options_lpa7user_birth_day_and_more.py  0003_alter_lpa7user_image.py
auth_app/templates/auth_app/: change.html  create.html  index.html  login.html
index_app/: urls.py  views.py
index_app/templates/index_app/: base.html  index.html
server/: settings.py  urls.py
