[tool.poetry]
name = "lpa7-final-project"
version = "0.1.0"
description = ""
authors = ["pekshevds <pekshev.ds@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.1"
pillow = "^10.4.0"
python-dotenv = {extras = ["cli"], version = "^1.0.1"}

[tool.poetry.dev-dependencies]
mypy = "^1.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
